--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,7 +17,7 @@ security:
             provider: app_user_provider
             guard:
                 authenticators:
-                    - App\Security\UserLoginAuthenticator
+                    - App\Security\DiscordAuthenticator
             logout:
                 path: app_logout
                 target: index
