--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,3 +34,9 @@ security:
 
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
+
+    role_hierarchy:
+        ROLE_LUGAL_MEMBER: [ROLE_USER]
+        ROLE_OFFICER: [ROLE_LUGAL_MEMBER]
+        ROLE_ADMIN: [ROLE_OFFICER, ROLE_SCRIBE, ROLE_EDIT_ROLES]
+        ROLE_SUPERADMIN: [ROLE_ADMIN]
