--- a/.env
+++ b/.env
@@ -9,5 +9,5 @@ APP_SECRET=447094689b2e10eabce7894104cd4020
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="postgresql://postgres:woof@db/lugal"
 ###< doctrine/doctrine-bundle ###
