--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,21 +2,23 @@ version: "3.7"
 
 services:
   app:
-    image: lugal:dev
+    build: .
     env_file:
       - .env.local
     volumes:
       - phpsocket:/var/run/php
+      - .:/var/www
     links:
       - db
 
   web:
-    image: lugal-nginx:dev
+    image: nginx:1.19.6-alpine
     ports:
       - 80:80
     volumes:
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - phpsocket:/var/run/php
-      - ./var/log/nginx:/var/log/nginx
+      - .:/var/www
     depends_on:
       - app
     links:
