--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -2,23 +2,20 @@ version: "3.7"
 
 services:
   app:
-    image: lugal-app:prod
+    image: janvt/lugal:app
     env_file:
       - .env.local
     volumes:
       - phpsocket:/var/run/php
-      - .:/var/www
     links:
       - db
 
   web:
-    image: lugal-web:prod
+    image: janvt/lugal:web
     ports:
       - 80:80
     volumes:
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - phpsocket:/var/run/php
-      - .:/var/www
     depends_on:
       - app
     links:
@@ -31,7 +28,15 @@ services:
       POSTGRES_PASSWORD: woof
       POSTGRES_DB: lugal
     volumes:
-      - ./var/db:/var/lib/postgresql/data
+      - ./var/lugal/db:/var/lib/postgresql/data
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
+    links:
+      - db
 
 volumes:
   phpsocket:
