--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ APP_SECRET=447094689b2e10eabce7894104cd4020
 ###> doctrine/doctrine-bundle ###
 DATABASE_URL="postgresql://postgres:woof@db/lugal"
 ###< doctrine/doctrine-bundle ###
+###> sentry/sentry-symfony ###
+SENTRY_DSN=
+###< sentry/sentry-symfony ###
