--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "knpuniversity/oauth2-client-bundle": "^2.7",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.1",
+        "sentry/sentry-symfony": "^3.5",
         "symfony/asset": "5.2.*",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
