--- a/.env
+++ b/.env
@@ -14,3 +14,4 @@ DATABASE_URL="postgresql://postgres:woof@db/lugal"
 ###> sentry/sentry-symfony ###
 SENTRY_DSN=
 ###< sentry/sentry-symfony ###
+VERSION=
