--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,14 +23,8 @@ security:
                 target: index
             remember_me:
                 secret: '%kernel.secret%'
-                lifetime: 604800 # 1 week in seconds
+                lifetime: 604800
                 path: /
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
 
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
