allow officers to add notes

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,5 +32,5 @@ security:
     role_hierarchy:
         ROLE_LUGAL_MEMBER: [ROLE_USER]
         ROLE_OFFICER: [ROLE_LUGAL_MEMBER]
-        ROLE_ADMIN: [ROLE_OFFICER, ROLE_SCRIBE, ROLE_EDIT_ROLES]
-        ROLE_SUPERADMIN: [ROLE_ADMIN]
+        ROLE_ADMIN: [ROLE_OFFICER, ROLE_SCRIBE]
+        ROLE_SUPERADMIN: [ROLE_ADMIN, ROLE_EDIT_ROLES]
