implement profile verification

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,9 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
+        bind:
+            $uploadsDir: '%kernel.project_dir%/public/images/uploads/'
+            $uploadsPublicDir: 'images/uploads/'
 
     App\:
         resource: '../src/'
