--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
     volumes:
       - phpsocket:/var/run/php
       - .:/var/www
+      - ./var/uploads:/var/www/public/uploads
     links:
       - db
 
@@ -19,6 +20,7 @@ services:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - phpsocket:/var/run/php
       - .:/var/www
+      - ./var/uploads:/var/www/public/uploads
     depends_on:
       - app
     links:
@@ -27,9 +29,8 @@ services:
   db:
     image: postgres:13.1-alpine
     restart: always
-    environment:
-      POSTGRES_PASSWORD: woof
-      POSTGRES_DB: lugal
+    env_file:
+      - .env.db.local
     volumes:
       - ./var/db:/var/lib/postgresql/data
 
