start work on scribe controller

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,5 +32,6 @@ security:
     role_hierarchy:
         ROLE_LUGAL_MEMBER: [ROLE_USER]
         ROLE_OFFICER: [ROLE_LUGAL_MEMBER]
-        ROLE_ADMIN: [ROLE_OFFICER, ROLE_SCRIBE]
+        ROLE_SCRIBE_ADMIN: [ROLE_SCRIBE]
+        ROLE_ADMIN: [ROLE_OFFICER, ROLE_SCRIBE_ADMIN]
         ROLE_SUPERADMIN: [ROLE_ADMIN, ROLE_EDIT_ROLES]
