Remove hard coded lugal references

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,8 +30,8 @@ security:
          - { path: ^/admin, roles: ROLE_ADMIN }
 
     role_hierarchy:
-        ROLE_LUGAL_MEMBER: [ROLE_USER]
-        ROLE_OFFICER: [ROLE_LUGAL_MEMBER]
+        ROLE_KINGDOM_MEMBER: [ROLE_USER]
+        ROLE_OFFICER: [ROLE_KINGDOM_MEMBER]
         ROLE_SCRIBE_ADMIN: [ROLE_SCRIBE]
         ROLE_ADMIN: [ROLE_OFFICER, ROLE_SCRIBE_ADMIN]
         ROLE_SUPERADMIN: [ROLE_ADMIN, ROLE_EDIT_ROLES]
