--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,7 +2,7 @@
 server {
     listen 80 default_server;
 
-    server_name localhost lugal.gg;
+    server_name localhost;
     root /var/www/public;
 
     location / {
