--- a/config/packages/prod/security.yaml
+++ b/config/packages/prod/security.yaml
@@ -1,3 +1,3 @@
 security:
   access_control:
-    - { path: ^/admin, roles: ROLE_ADMIN, require_channel: https }
+    - { path: ^/admin, roles: ROLE_ADMIN, requires_channel: https }
