--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -4,7 +4,7 @@ framework:
     csrf_protection: true
 
     trusted_hosts:  ['^(.+\.)?roks\.gg', '^localhost$']
-    trusted_proxies: '%env(TRUSTED_PROXIES)%'
+    trusted_proxies: '127.0.0.1,REMOTE_ADDR'
 
     session:
         enabled: true
