--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -5,6 +5,7 @@ framework:
 
     trusted_hosts:  ['^(.+\.)?roks\.gg', '^localhost$']
     trusted_proxies: '127.0.0.1,REMOTE_ADDR'
+    trusted_headers: ['x-forwarded-for', 'x-forwarded-host', 'x-forwarded-proto', 'x-forwarded-port']
 
     session:
         enabled: true
