--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -21,7 +21,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: build & push
-        run:
+        run: |
           docker build -t janvt/roks:app -f Dockerfile.prod .
           docker push janvt/roks:app
           docker build -t janvt/roks:web --build-arg ASSET_IMAGE=janvt/roks:app -f Dockerfile.prod.nginx .
