--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -10,11 +10,7 @@ jobs:
     name: Build Server Image
     runs-on: ubuntu-latest
     steps:
-      - name: 'checkout'
-        uses: actions/checkout@v1
-        with:
-          repository: janvt/rok-kdm
-          token: ${{ github.token }}
+      - uses: actions/checkout@v1
       - name: login
         uses: docker/login-action@v1
         with:
