--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -11,10 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
       - name: login
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: build & push
-        run: docker build -t janvt/roks:app -f Dockerfile.prod . && docker push janvt/roks:app && docker build -t janvt/roks:web --build-arg ASSET_IMAGE=janvt/roks:app -f Dockerfile.prod.nginx . && docker push janvt/roks:web
+      - name: build app
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: janvt/roks:app
+          file: Dockerfile.prod
