--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -13,3 +13,6 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+        dql:
+            string_functions:
+                ilike: App\Util\ILike
