--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -39,6 +39,8 @@ server {
         access_log off;
     }
 
+    client_max_body_size 12M;
+
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
 }
