--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,3 +3,4 @@ twig:
     form_themes: ['bootstrap_4_layout.html.twig']
     globals:
         site_title: '%site_title%'
+        site_analytics_id: '%site_analytics_id%'
