--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -8,6 +8,7 @@ services:
     volumes:
       - phpsocket:/var/run/php
       - ./var/uploads:/var/www/public/uploads
+      - ./var/imports:/var/www/public/imports
     links:
       - db
 
