--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,7 +31,7 @@ security:
 
     role_hierarchy:
         ROLE_KINGDOM_MEMBER: [ROLE_USER]
-        ROLE_OFFICER: [ROLE_KINGDOM_MEMBER]
+        ROLE_OFFICER: [ROLE_KINGDOM_MEMBER, ROLE_SCRIBE]
         ROLE_SCRIBE_ADMIN: [ROLE_SCRIBE]
         ROLE_ADMIN: [ROLE_OFFICER, ROLE_SCRIBE_ADMIN]
         ROLE_SUPERADMIN: [ROLE_ADMIN, ROLE_EDIT_ROLES]
