--- a/.env
+++ b/.env
@@ -15,3 +15,8 @@ DATABASE_URL="postgresql://postgres:woof@db/lugal"
 SENTRY_DSN=
 ###< sentry/sentry-symfony ###
 VERSION=
+###> google/apiclient ###
+GOOGLE_API_KEY=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+###< google/apiclient ###
