--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ APP_SECRET=447094689b2e10eabce7894104cd4020
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="postgresql://postgres:woof@db/lugal"
+DATABASE_URL="postgresql://postgres:woof@db/rok-kdm"
 ###< doctrine/doctrine-bundle ###
 ###> sentry/sentry-symfony ###
 SENTRY_DSN=
