--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -18,6 +18,8 @@ server {
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
 
+        fastcgi_read_timeout 300;
+
         # Prevents URIs that include the front controller. This will 404:
         # http://domain.tld/index.php/some-path
         internal;
